# tauri-specta

./: Cargo.toml  package.json  pnpm-lock.yaml
examples/app/src/: bindings.ts  main.ts
examples/app/src-tauri/: Cargo.toml  tauri.conf.json
examples/app/src-tauri/capabilities/: migrated.json
examples/custom-plugin/app/src-tauri/: Cargo.toml
examples/custom-plugin/plugin/: bindings.ts
src/: event.rs  globals.js  globals.ts  js_ts.rs  lib.rs
