[package]
name = "tauri-specta-example-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"
publish = false

[build-dependencies]
tauri-build = { git = "https://github.com/spacedriveapp/tauri.git", branch = "v2.0.0-beta-13" , version = "2.0.0-beta" }

[dependencies]
serde_json = "1.0"
specta.workspace = true
serde = { version = "1.0", features = ["derive"] }
tauri = { git = "https://github.com/spacedriveapp/tauri.git", branch = "v2.0.0-beta-13" , version = "2.0.0-beta" }
tauri-specta = { path = "../../../", features = ["typescript", "javascript"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
